style.css
/* set up */
body {
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    background-color: #d1eae7;
    color: black;
    margin: 0 auto;
    padding: 0;
    align-items: center;
    font-size: 2vh;
    display: flex;
    flex-direction: column;
    overflow-y: scroll;
}
body.dark-mode {
    background-color: #142b2c;
    color: #d1eae7;
}
.main {
    display: flex;
    flex-direction: column;
    width: 80%;
    min-height: 100vh;
    align-items: center;
    margin: 4vh;
    gap: 8px;
}
@media (max-width: 820px) {
    .main {
        width: 90%;
        margin: 3vh;
    }
}
.headers {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    width: 100%;
    justify-content: space-between;
}
@media (max-width: 519px) {
    .headers {
        display: none;
    }
}
.header-left {
    font-size: 30px;
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    width: 30%;
    gap: 3vw;
    font-variant: small-caps;
}
.header-left #header-logo {
    height: 25px;
    width: auto;
    margin-top: 0.4vh;
}
.header-right {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    width: 10%;
    gap: 1vw;
}
.icon-link {
    text-decoration: none;
    font-size: 20px;
}
.header-link:hover {
    cursor: pointer;
}
.header-link:after {
    width: 100%;
}
/* phone size media */
.headers-menu {
    display: none;
}
@media (max-width: 519px) {
    .headers-menu {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        width: 100%;
    }
}
@media (max-width: 519px) {
    .headers-menu .header-left #smallheader-logo {
        height: 50px;
        width: auto;
    }
}
@media (max-width: 519px) {
    .headers-menu .header-right {
        display: flex;
        flex-direction: column;
        justify-content: flex-start;
        align-items: flex-end;
        padding-top: 20px;
        padding-right: 10px;
    }
}
@media (max-width: 519px) {
    .headers-menu .header-right .menu-toggle {
        display: flex;
        flex-direction: column;
        justify-content: space-between;
        width: 30px;
        height: 20px;
        cursor: pointer;
    }
}
@media (max-width: 519px) {
    .headers-menu .header-right .menu-toggle .line {
        width: 100%;
        height: 2px;
        background-color: #000000;
    }
}
@media (max-width: 519px) {
    .headers-menu .header-right .menu-toggle .line.dark-mode {
        width: 100%;
        height: 2px;
        background-color: #d1eae7;
    }
}
@media (max-width: 519px) {
    .headers-menu .header-right .menu {
        display: none;
    }
}
@media (max-width: 519px) {
    .headers-menu .header-right .menu.active {
        display: flex;
        flex-direction: column;
    }
}
@media (max-width: 519px) {
    .headers-menu .header-right .menu ul {
        list-style-type: none;
        margin: 0;
        padding: 0;
        z-index: 1;
        height: 10px;
    }
}
@media (max-width: 519px) {
    .headers-menu .header-right .menu li {
        margin:0;
        padding: 5px;
        border: 1px solid #97c3c3;
        background-color: #366f72;
        color: #d1eae7;
        width: 70px;
    }
}
@media (max-width: 519px) {
    .headers-menu .header-right .menu li.dark-mode {
        margin:0;
        padding: 5px;
        border: 1px solid #97c3c3;
        background-color: #000000;
        color: #d1eae7;
        width: 70px;
    }
}


/* home page */
.home-page {
    display: flex;
    flex-direction: row;
    height: 100%;
    justify-content: space-around;
    flex-wrap: nowrap;
    align-items: center;
    margin-top: 5vw;
    gap: 5vw;
}
.home-page .home-left {
    display: flex;
    flex-direction: column;
    padding: 10px 0 10px 0;
    margin: 0 0 0 4vw;
    z-index: 1;
    width: 70%;
    align-items: flex-end;
    justify-content: center;
}
.home-page .home-left .home-name {
    display: flex;
    flex-direction: row;
    font-size: 7vw;
    gap: 4vw;
}
#home-aka {
    font-size: 1.5vw;
}
.home-right {
    display: flex;
    margin: 0;
    width: 30%;
    padding: 10px 0 10px 0;
    margin: 0 4vw 0 0;
    align-items: center;
    justify-content: flex-end;
}
#pic-container img {
    height: 30vw;
    width: auto;
    border-radius: 5%;
}
/* one media size */
@media (max-width: 820px) and (min-width: 520px) {
    .home-page {
        display: flex;
        flex-direction: column;
        align-items: center;
        margin-top: 5vh;
    }
}
@media (max-width: 820px) and (min-width: 520px) {
    .home-page .home-left {
        margin: 0;
        width: 100%;
        align-items: center;
        justify-content: flex-start;
        gap: 1vh;
    }
}
@media (max-width: 820px) and (min-width: 520px) {
    .home-page .home-left .home-name {
        display: flex;
        flex-direction: column;
        align-items: center;
        font-size: 16vw;
        gap: 1vh;
    }
}
@media (max-width: 820px) and (min-width: 520px) {
    #home-aka {
        font-size: 3vw;
    }
}
@media (max-width: 820px) and (min-width: 520px) {
    .home-right {
        width: 100%;
        margin: 0;
        justify-content: center;
    }
}
@media (max-width: 820px) and (min-width: 520px) {
    #pic-container img {
        width: 30vh;
        height: auto;
    }
}
/* another media size */
@media (max-width: 519px) {
    .home-page {
        display: flex;
        flex-direction: column;
        align-items: center;
        margin-top: 5vh;
    }
}
@media (max-width: 519px) {
    .home-page .home-left {
        margin: 0;
        width: 100%;
        align-items: center;
        justify-content: flex-start;
        gap: 1vh;
    }
}
@media (max-width: 519px) {
    .home-page .home-left .home-name {
        display: flex;
        flex-direction: column;
        align-items: center;
        font-size: 12vh;
        gap: 1vh;
    }
}
@media (max-width: 519px) {
    #home-aka {
        font-size: 2vh;
    }
}
@media (max-width: 519px) {
    .home-right {
        width: 100%;
        margin: 0;
        justify-content: center;
    }
}
@media (max-width: 519px) {
    #pic-container img {
        width: 30vh;
        height: auto;
    }
}

/* about page */
.about-page {
    display: flex;
    flex-direction: column;
    gap: 10px;
    padding: 50px 0px;
}
@media (max-width: 820px) {
    .about-page {
        flex-wrap: wrap;
        justify-content: space-around;
        gap: 30px;
    }
}
.about-page .intro-first {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: flex-start;
    gap: 30px;
    align-items: center;
}
#about-mepic img {
    width: 200px;
    height: auto;
    border-radius: 50%;
    border: 1px solid black;
}
.about-page .intro-second {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    gap: 30px;
}
.about-text {
    font-size: 30px;
    max-width: 50vw;
}
.about-page .intro-second .second-writing {
    display: flex;
    flex-direction: column;
    gap: 30px;
}
.about-caption {
    font-size: 15px;
}
.about-page .intro-third {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-between;
    gap: 30px;
}
.about-pic {
    width: 200px;
    height: auto;
    border-radius: 5%;
    border: 1px solid black;
}
.pic-wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 10px;
}
.about-page a {
    color: #366f72;
    text-decoration: none;
}
.about-page a:hover {
    cursor: pointer;
}
@media (max-width: 820px) {
    .about-text {
        max-width: 80vw;
    }
}
@media (max-width: 820px) {
    .about-page .intro-first {
        display: flex;
        flex-direction: column;
    }
}
@media (max-width: 820px) {
    #about-mepic img {
        width: 225px;
        border-radius: 50%;
    }
}
@media (max-width: 820px) {
    .about-page .intro-second {
        display: flex;
        flex-direction: column-reverse;
    }
}
@media (max-width: 820px) {
    .about-page .intro-third {
        display: flex;
        flex-direction: column;
    }
}
@media (max-width: 820px) {
    .about-pic {
        width: 30vw;
        height: auto;
    }
}

/* projects page */
.projects-page {
    display: flex;
    font-size: 20px;
    padding: 20px;
    margin-top: 20px;
}

/* funsies page */
.funsies-page {
    display: flex;
    flex-direction: column;
}
/*
#footer-funsies:hover {
    cursor: pointer;
}
*/

/* socials page */
.socials-page {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-top: 60px;
    font-size: 40px;
    gap: 5vh;
}
#socials-actual {
    display: flex;
    flex-direction: row;
    justify-content: center;
    gap: 10vw;
}
@media (max-width: 519px) {
    .socials-page {
        padding-top: 30px;
        font-size: 18px;
        gap: 20px;
    }
}
@media (max-width: 519px) {
    #socials-actual {
        gap: 10px;
    }
}

/* footers */
.footer {
    display: flex;
    flex-direction: column;
    border-top: 1px solid #000000;
    width: 100%;
    margin-top: 50px;
    padding-top: 15px;
    padding-bottom: 15px;
    align-items: center;
    gap: 5px;
    font-size: 2vh;
}
.footer.dark-mode {
    border-top: 1px solid #d1eae7;
}
.footer .darkmode {
    display: flex;
    flex-direction: row;
    gap: 10px;
}
.switch {
    display: flex;
    flex-direction:row;
    width: 4.5vh;
    height: 1.5vh;
    border-radius: 34px;
    background-color:#97c3c3;
    transform: translateY(3px);
}
.switch input {
    opacity: 0;
    width: 0;
    height: 0;
}
.switch.dark-mode {
    background-color:#366f72;
}
.switch:hover {
    cursor: pointer;
}
.slider {
    height: 2.3vh;
    width: 2.3vh;
    transition: .4s;
    border-radius: 50%;
    transform: translate(-10px,-3px);
}
input:not(:checked) + .slider {
    background-color: #366f72;
}
input:checked + .slider {
    background-color: #97c3c3;
    transform: translate(1.6vh,-3px);
}
input:focus + .slider {
    box-shadow: 0 0 1px #366f72;
}

